# LRPSolverAIQA

./: .gitignore  AIQA_README.md  README.md  conftest.py  demo_showcase.py  generate_readme_images.py  main.py  pyproject.toml  run_benchmark.py  run_cross_model.py
.github/workflows/: main.yml
DATALRP/DATALRP/: Ch69Dep100x10  Ch69Dep50x5  Ch69Dep75x10  Daskin95Cli150x10  Daskin95Cli88x8  Daskin95Dep150x10  Daskin95Dep88x8  Gaskell67Cli36x5  Gaskell67Dep21x5  Gaskell67Dep22x5  Gaskell67Dep29x5  Gaskell67Dep32x5  Gaskell67Dep36x5  Min92Cli134x8  Min92Cli27x5  Min92Dep134x8  Min92Dep27x5  Or76Cli117x14  Or76Dep117x14  Perl83Cli12x2  Perl83Cli318x4  Perl83Cli55x15  Perl83Cli85x7  Perl83Dep12x2  Perl83Dep318x4  Perl83Dep55x15  Perl83Dep85x7  Srivastava86Cli8x2  Srivastava86Dep8x2
ai_agent/: __init__.py  prompt_templates.py  solver.py
dashboard/: cross_model_plot.py  report_generator.py
lrp/: __init__.py  builder.py  config.py  visualization.py
lrp/algorithms/: __init__.py  cuckoo_search.py  nearest_neighbor.py  two_opt.py
lrp/io/: __init__.py  data_loader.py
lrp/models/: __init__.py  distance.py  node.py  solution.py  vehicle_route.py
observability/: __init__.py  phoenix_setup.py
qa_suite/: __init__.py  run_comparison.py  run_deterministic_qa.py
qa_suite/adversarial/: impossible_instances.py
qa_suite/common/: __init__.py  adapters.py  cost_guard.py  faithfulness.py  fixtures.py  schemas.py
qa_suite/deepeval_tests/: metrics.py  test_deterministic.py  test_llm_solver.py
qa_suite/deterministic_checks/: __init__.py  optimality_gap.py  reasoning_audit.py  soft_scoring.py  test_soft_scoring.py  validators.py
qa_suite/metamorphic_tests/: __init__.py  perturbations.py  test_metamorphic.py
qa_suite/probabilistic/: bootstrap_ci.py  prompt_sensitivity.py  scaling_analysis.py  tier_selector.py
qa_suite/ragas_tests/: __init__.py  (+1 more)
tests/: test_builder.py  test_data_loader.py  test_distance.py  test_node.py  test_solution.py  test_solver_exception_handling.py  test_two_opt.py
(+2 files in other folders)
