[project]
name = "lrp-solver"
version = "0.1.0"
description = "Location-Routing Problem solver using Cuckoo Search metaheuristic"
authors = [
    { name = "Konstantinos Zafeiris" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
]

[project.scripts]
lrp-solve = "main:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lrp"]
