[project]
name = "lrp-solver"
version = "0.1.0"
description = "Location-Routing Problem solver using Cuckoo Search metaheuristic"
authors = [
    { name = "Konstantinos Zafeiris" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "arize-phoenix>=13.3.0",
    "deepeval>=3.8.8",
    "matplotlib>=3.9.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.scripts]
lrp-solve = "main:main"

[project.optional-dependencies]
qa = [
    "deepeval>=2.0",
    "ragas>=0.2",
    "pydantic>=2.0",
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.23",
    "plotly>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lrp"]

[tool.pytest.ini_options]
markers = [
    "llm: marks tests that require ANTHROPIC_API_KEY (deselect with -m 'not llm')",
    "metamorphic: metamorphic robustness tests for logical consistency under perturbation",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
